--- a/web110/assignment2b.html
+++ b/web110/assignment2b.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Assignment 2 Activities</title>
+  </head>
+  <body>
+    <p>In the activity of comparing the search engines Google, Bing, Yahoo, and Ask, I was directed to review the user interface and search results of each. Comparing the UIs, Google had the best interface, followed by Bing. Bing resembles Google, but Google provides better results. Google holds ninety percent of the search engine market, which is not surprising given its faster search speed and more relevant results. Yahoo and Ask have cluttered home pages with numerous ads and distractions, whereas Google and Bing are clutter-free and more user-friendly. This streamlined design makes finding information quicker and easier. I do not see how I can use this in my future as I have always been a Google search user, and the other three have never piqued my interest to switch. . 
 
+The other activity I chose was learning about creating a webpage to appear in Google search results. By entering the Wikiversity page URL, this activity provided examples and instructions on how to get recognized by Google’s SEO. It went in-depth on SEO basics, including keyword optimization, meta tags, and the importance of high-quality content. Additionally, it covered crawling and indexing, which are essential for ensuring that search engines can find and understand your content. The ranking and search appearances section explained how to improve your site's position in search results through backlinks and user engagement. Lastly, monitoring and debugging emphasized the importance of using tools like Google Analytics and Search Console to track performance and identify issues. This task can help me in the future if I ever create a business or assist a client and they realize their website isn’t showing in Google search results. I can use this knowledge to help build the website to meet SEO expectations which results in better visibility.  </p>
+  </body>
+</html>
