--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <p>Austin Ryder</p>
+    <ul style="line-height:80%">
+  <li>Assignment 1.html</li>
+  <li>Assignment 2.html</li>
+  <li>Assignment 3.html</li>
+</ul>
   </body>
 </html>
