--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <p>Austin Ryder</p>
     <ul style="line-height:80%">
-      <li>Assignment 1.html</li>
-      <li>Assignment 2.html</li>
-      <li>Assignment 3.html</li>
+      <li>ryderaustin.github.io\web110\assignment.html</li>
+      <li>ryderaustin.github.io\web110\assignment1b.html</li>
+      <li>ryderaustin.github.io\web110\assignment2.html</li>
 </ul>
   </body>
   
