--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <p>Austin Ryder</p>
     <ul style="line-height:80%">
-      <li>ryderaustin.github.io\web110\assignment.html</li>
-      <li>ryderaustin.github.io\web110\assignment1b.html</li>
-      <li>ryderaustin.github.io\web110\assignment2.html</li>
+      <li><a href="ryderaustin.github.io\web110\assignment.html">Assignment 1</a></li>
+      <li><a href="ryderaustin.github.io\web110\assignment1b.html">Assignment 1b</a></li>
+      <li><a href="ryderaustin.github.io\web110\assignment2.html">Assignment 2</a></li>
 </ul>
   </body>
   
