add name to header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>WEB110 Portfolio</title>
   </head>
+    <title>Austin Ryder</title>
   <body>
-    <p>Austin Ryder</p>
+    <p></p>
     <ul style="line-height:80%">
       <li><a href="ryderaustin.github.io\web110\assignment.html">Assignment 1</a></li>
       <li><a href="ryderaustin.github.io\web110\assignment1b.html">Assignment 1b</a></li>
