--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>WEB110 Portfolio</title>
-  </head>
     <title>Austin Ryder</title>
+  </head>
   <body>
     <p></p>
     <ul style="line-height:80%">
-      <li><a href="assignment.html">Assignment 1</a></li>
-      <li><a href="assignment1b.html">Assignment 1b</a></li>
-      <li><a href="assignment2.html">Assignment 2</a></li>
-      <li><a href="assignment2b.html">Assignment 2b</a></li> 
-      <li><a href="assignment3.html">Assignment 3</a></li>
-      <li><a href="assignment4a.html">Assignment 4a</a></li>
-      <li><a href="assignment4b.html">Assignment 4b</a></li>
+      <li><a href=assignment.html>Assignment 1</a></li>
+      <li><a href=assignment1b.html>Assignment 1b</a></li>
+      <li><a href=assignment2.html>Assignment 2</a></li>
+      <li><a href=assignment2b.html>Assignment 2b</a></li> 
+      <li><a href=assignment3.html>Assignment 3</a></li>
+      <li><a href=assignment4a.html>Assignment 4a</a></li>
+      <li><a href=assignment4b.html>Assignment 4b</a></li>
 </ul>
   </body>
   
