--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body>
     <p></p>
     <ul style="line-height:80%">
-      <li><a href=web110/assignment.html>Assignment 1</a></li>
-      <li><a href=web110/assignment1b.html>Assignment 1b</a></li>
-      <li><a href=web110/assignment2.html>Assignment 2</a></li>
-      <li><a href=web110/assignment2b.html>Assignment 2b</a></li> 
-      <li><a href=web110/assignment3.html>Assignment 3</a></li>
-      <li><a href=web110/assignment4a.html>Assignment 4a</a></li>
-      <li><a href=web110/assignment4b.html>Assignment 4b</a></li>
+      <li><a href=ryderaustin.github.io/web110/assignment.html>Assignment 1</a></li>
+      <li><a href=ryderaustin.github.io/web110/assignment1b.html>Assignment 1b</a></li>
+      <li><a href=ryderaustin.github.io/web110/assignment2.html>Assignment 2</a></li>
+      <li><a href=ryderaustin.github.io/web110/assignment2b.html>Assignment 2b</a></li> 
+      <li><a href=ryderaustin.github.io/web110/assignment3.html>Assignment 3</a></li>
+      <li><a href=ryderaustin.github.io/web110/assignment4a.html>Assignment 4a</a></li>
+      <li><a href=ryderaustin.github.io/web110/assignment4b.html>Assignment 4b</a></li>
 </ul>
   </body>
   
