--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>WEB110 Portfolio</title>
-    <title>Austin Ryder</title>
+    <title>Austin's WEB110 Portfolio</title>
   </head>
   <body>
     <p></p>
