--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <header>
     <meta charset="UTF-8">
     <title>Austin's WEB110 Portfolio</title>
-  </head>
+  </header>
   <body>
     <p></p>
     <ul style="line-height:80%">
