--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <header>
+  <head>
     <meta charset="UTF-8">
     <title>Austin's WEB110 Portfolio</title>
-  </header>
+  </head>
   <body>
     <p></p>
     <ul style="line-height:80%">
@@ -16,5 +16,4 @@
       <li><a href=ryderaustin.github.io/web110/assignment4b.html>Assignment 4b</a></li>
 </ul>
   </body>
-  
 </html>
