--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Austin's WEB110 Portfolio</title>
-  </head>
-  <body>
-    <p></p>
-    <ul style="line-height:80%">
-      <li><a href=ryderaustin.github.io/web110/assignment.html>Assignment 1</a></li>
-      <li><a href=ryderaustin.github.io/web110/assignment1b.html>Assignment 1b</a></li>
-      <li><a href=ryderaustin.github.io/web110/assignment2.html>Assignment 2</a></li>
-      <li><a href=ryderaustin.github.io/web110/assignment2b.html>Assignment 2b</a></li> 
-      <li><a href=ryderaustin.github.io/web110/assignment3.html>Assignment 3</a></li>
-      <li><a href=ryderaustin.github.io/web110/assignment4a.html>Assignment 4a</a></li>
-      <li><a href=ryderaustin.github.io/web110/assignment4b.html>Assignment 4b</a></li>
+<head>
+  <meta charset="UTF-8">
+  <title>Austin's WEB110 Portfolio</title>
+</head>
+<body>
+<header> Austin's Assignments</header>
+  <p></p>
+  <ul style="line-height:80%">
+    <li><a href=ryderaustin.github.io/web110/assignment.html>Assignment 1</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment1b.html>Assignment 1b</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment2.html>Assignment 2</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment2b.html>Assignment 2b</a></li> 
+    <li><a href=ryderaustin.github.io/web110/assignment3.html>Assignment 3</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment4a.html>Assignment 4a</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment4b.html>Assignment 4b</a></li>
 </ul>
-  </body>
+</body>
 </html>
