--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>Austin's WEB110 Portfolio</title>
 </head>
 <body>
-<header> Austin's Assignments</header>
+<header> 
+    <h1>Austin's Assignments</h1>
+</header>
   <p></p>
   <ul style="line-height:80%">
     <li><a href=ryderaustin.github.io/web110/assignment.html>Assignment 1</a></li>
