--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Austin's Assignments</h1>
 </header>
   <p></p>
-  <ul style="line-height:80%">
+  <ul style="list-style-type: disc;">
     <li><a href=ryderaustin.github.io/web110/assignment.html>Assignment 1</a></li>
     <li><a href=ryderaustin.github.io/web110/assignment1b.html>Assignment 1b</a></li>
     <li><a href=ryderaustin.github.io/web110/assignment2.html>Assignment 2</a></li>
