--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <li><a href=ryderaustin.github.io/web110/assignment3.html>Assignment 3</a></li>
     <li><a href=ryderaustin.github.io/web110/assignment4a.html>Assignment 4a</a></li>
     <li><a href=ryderaustin.github.io/web110/assignment4b.html>Assignment 4b</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment5.html>Assignment 5</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment5b.html>Assignment 5b</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment6.html>Assignment 6</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment7.html>Assignment 7</a></li>
+    <li><a href=ryderaustin.github.io/web110/assignment8.html>Assignment 8</a></li>
 </ul>
 </body>
 </html>
