--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </header>
   <p></p>
   <ul style="list-style-type: disc;">
-    <li><a href=ryderaustin.github.io/web110/assignment.html>Assignment 1</a></li>
+    <li><a href=/web110/assignment.html>Assignment 1</a></li>
     <li><a href=ryderaustin.github.io/web110/assignment1b.html>Assignment 1b</a></li>
     <li><a href=ryderaustin.github.io/web110/assignment2.html>Assignment 2</a></li>
     <li><a href=ryderaustin.github.io/web110/assignment2b.html>Assignment 2b</a></li> 
