--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <p></p>
   <ul style="list-style-type: disc;">
     <li><a href=/web110/assignment.html>Assignment 1</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment1b.html>Assignment 1b</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment2.html>Assignment 2</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment2b.html>Assignment 2b</a></li> 
-    <li><a href=ryderaustin.github.io/web110/assignment3.html>Assignment 3</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment4a.html>Assignment 4a</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment4b.html>Assignment 4b</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment5.html>Assignment 5</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment5b.html>Assignment 5b</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment6.html>Assignment 6</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment7.html>Assignment 7</a></li>
-    <li><a href=ryderaustin.github.io/web110/assignment8.html>Assignment 8</a></li>
+    <li><a href=/web110/assignment1b.html>Assignment 1b</a></li>
+    <li><a href=/web110/assignment2.html>Assignment 2</a></li>
+    <li><a href=/web110/assignment2b.html>Assignment 2b</a></li> 
+    <li><a href=/web110/assignment3.html>Assignment 3</a></li>
+    <li><a href=/web110/assignment4a.html>Assignment 4a</a></li>
+    <li><a href=/web110/assignment4b.html>Assignment 4b</a></li>
+    <li><a href=/web110/assignment5.html>Assignment 5</a></li>
+    <li><a href=/web110/assignment5b.html>Assignment 5b</a></li>
+    <li><a href=/web110/assignment6.html>Assignment 6</a></li>
+    <li><a href=/web110/assignment7.html>Assignment 7</a></li>
+    <li><a href=/web110/assignment8.html>Assignment 8</a></li>
 </ul>
 </body>
 </html>
