--- a/web110/assignment.html
+++ b/web110/assignment.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="ryderaustin.github.io\web110\onlinecss.css">
   </head>
+  <h1><h1 style="color:green">"This is my inline style example with a green heading"</h1></h1>
   <body>
-    <p>Hello world!</p>
+    <p>My paragraph is using an online style of CSS.</p>
   </body>
 </html>
