did work on assisngment instead of 5b

--- a/web110/assignment5b.html
+++ b/web110/assignment5b.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8">
     <title>Title</title>
   </head>
+  <h1><h1 style="color:green">This is my inline style example with a green heading</h1></h1>
   <body>
-    <p>Setting location for assignment 5b draft - so I cant verify links all work</p>
+    <p></p>
   </body>
+</html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+      body {
+      background-color: linen;
+      }
+      h1 {
+      color: maroon;
+      margin-left: 40px;
+      }
+      </style>
+  </head>
+  <h1><h1>
+  <body>
+    <p>This wording is using an inline type of style</p>
+  </body>
+</html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link rel="stylesheet" href="ryderaustin.github.io\web110\onlinecss.css">
+</head>
+<h1><h1>
+<body>
+  <p>This wording is using a style sheet type of style</p>
+</body>
 </html>
