--- a/web110/assignment2b.html
+++ b/web110/assignment2b.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Assignment 2 Activities</title>
+    <link rel="stylesheet" href="external styles.css">
   </head>
+  <h1>Assignment 2b</h1>
   <body>
     <p>In the activity of comparing the search engines Google, Bing, Yahoo, and Ask, I was directed to review the user interface and search results of each. Comparing the UIs, Google had the best interface, followed by Bing. Bing resembles Google, but Google provides better results. Google holds ninety percent of the search engine market, which is not surprising given its faster search speed and more relevant results. Yahoo and Ask have cluttered home pages with numerous ads and distractions, whereas Google and Bing are clutter-free and more user-friendly. This streamlined design makes finding information quicker and easier. I do not see how I can use this in my future as I have always been a Google search user, and the other three have never piqued my interest to switch. . 
 
