--- a/web110/assignment.html
+++ b/web110/assignment.html
@@ -3,40 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="external styles.css">
   </head>
-  <h1><h1 style="color:green">This is my inline style example with a green heading</h1></h1>
   <body>
-    <p></p>
+    <p>Hello world!</p>
   </body>
-</html>
-
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-      body {
-      background-color: linen;
-      }
-      h1 {
-      color: maroon;
-      margin-left: 40px;
-      }
-      </style>
-  </head>
-  <h1><h1>
-  <body>
-    <p>This wording is using an inline type of style</p>
-  </body>
-</html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-  <link rel="stylesheet" href="ryderaustin.github.io\web110\onlinecss.css">
-</head>
-<h1><h1>
-<body>
-  <p>This wording is using a style sheet type of style</p>
-</body>
 </html>
