--- a/web110/assignment5.html
+++ b/web110/assignment5.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="external styles.css">
   </head>
+  <h1>Assignment 5</h1>
   <body>
     <p>In this activity, I learned how to connect Visual Studio Code (VSC) and GitHub. I learned the basics about using VSC on how to push my code over to GitHub and verify the connection between the two. Learning this is a skill I will value and continue to grow since VSC is optimized for building and debugging modern web and cloud applications. I can use this in my skillset to start developing code and building a portfolio with some personal projects once I get the hang of using HTML and CSS. I researched VSC and noticed that you can attach your framework to the VSC and see in real time what you are coding which was interesting. </p>
   </body>
