--- a/web110/assignment5b.html
+++ b/web110/assignment5b.html
@@ -17,7 +17,9 @@
         .style1 {
             color: #a200ff;
         }
+
     </style>
+
     <style>
         .style2 {
             font-family: Georgia, 'Times New Roman', Times, serif;
@@ -29,9 +31,9 @@
         }
 
         .style2 p {
-            
             font-size: 16px;
         }
+
     </style>
         <style>
             .style3 {
@@ -49,6 +51,7 @@
                 font-size: 20px;
                 color: yellow
             }
+            
         </style>
 </head>
 <body>
@@ -64,5 +67,6 @@
         <h3>Style 3 header</h3>
         <p>This is a third style paragraph text</p>
     </div>
+    <p>This assignment taught me how to incorporate different CSS styles into webpages. I can use this in the future to help build my portfolio to showcase I know how to use CSS in HTML effectively. I am wanting to expand my knowledge on this by incorporating borders, margins, hyperlinked buttons, and so forth. </p>
 </body>
 </html>
