add images and audio folder 6a

--- a/index.html
+++ b/index.html
@@ -3,13 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>Austin's WEB110 Portfolio</title>
+ <style>body {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: #42435f;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 80%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+h1 {
+  color: #333;
+  text-align: center;
+}
+
+p {
+  line-height: 1.6;
+  color: #ffffff;
+}
+
+a {
+  color: #ffffff;
+}</style>>
 </head>
 <body>
 <header> 
     <h1>Austin's Assignments</h1>
 </header>
-  <p></p>
-  <ul style="list-style-type: disc;">
+  <p>  <ul style="list-style-type: disc;">
+    <li><a href=/web110/assignment.html>Images</a></li>
+    <li><a href=/web110/assignment.html>Audio</a></li>
     <li><a href=/web110/assignment.html>Assignment 1</a></li>
     <li><a href=/web110/assignment1b.html>Assignment 1b</a></li>
     <li><a href=/web110/assignment2.html>Assignment 2</a></li>
@@ -22,6 +51,7 @@
     <li><a href=/web110/assignment6.html>Assignment 6</a></li>
     <li><a href=/web110/assignment7.html>Assignment 7</a></li>
     <li><a href=/web110/assignment8.html>Assignment 8</a></li>
-</ul>
+</ul></p>
+
 </body>
 </html>
