--- a/web110/assignment6.html
+++ b/web110/assignment6.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="external styles.css">
   </head>
   <body>
-    <p>Setting location for assignment 6 draft - so I cant verify links all work</p>
+    <iframe width="1080" height="720" src="https://www.youtube.com/embed/npnp--SSx_8?si=Jt2y6XyUL4CqwEAh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<p>video that helped me embed the video into this page.</p>
   </body>
 </html>
