--- a/web110/assignment8.html
+++ b/web110/assignment8.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="external styles.css">
   </head>
   <body>
     <p>Setting location for assignment 8 draft - so I cant verify links all work</p>
