removed some links+ added image to 6a

--- a/web110/assignment6.html
+++ b/web110/assignment6.html
@@ -8,5 +8,6 @@
   <body>
     <iframe width="1080" height="720" src="https://www.youtube.com/embed/npnp--SSx_8?si=Jt2y6XyUL4CqwEAh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <p>video that helped me embed the video into this page.</p>
+<img src="./images/html_coding_class-dc7edcb3-de2c-490a-9a45-ea07d0f32095.jpg" height = 480 width= 720><img>
   </body>
 </html>
