--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   width: 80%;
   margin: 20px auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: #555555;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 h1 {
-  color: #333;
+  color: #ffffff;
   text-align: center;
 }
 
@@ -47,6 +47,7 @@ a {
     <li><a href=/web110/assignment5.html>Assignment 5</a></li>
     <li><a href=/web110/assignment5b.html>Assignment 5b</a></li>
     <li><a href=/web110/assignment6.html>Assignment 6</a></li>
+    <li><a href=/web110/assignment6b.html>Assignment 6b</a></li>
     <li><a href=/web110/assignment7.html>Assignment 7</a></li>
     <li><a href=/web110/assignment8.html>Assignment 8</a></li>
 </ul></p>
