modify img code

--- a/web110/assignment7.html
+++ b/web110/assignment7.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="external styles.css">
   </head>
   <body>
-    <h1>Assignment 7</h1>
-    <p>My final project will be about Github, visual studio code, and basic html coding. It will cover creating a github account, coding within VSC, and basic coding concepts of HTML. The scope for user watching would be allow them to create a github account, connect it with VSC, create basic HTML coding with VSC, and pushing code to github via VSC.</p>
-    <img src="./images/gantchart.jpg" height = 480 width = 720>
+<h1>Assignment 7</h1>
+<p>My final project will be about Github, visual studio code, and basic html coding. It will cover creating a github account, coding within VSC, and basic coding concepts of HTML. The scope for user watching would be allow them to create a github account, connect it with VSC, create basic HTML coding with VSC, and pushing code to github via VSC.</p>
+<img src="./images/gant chart.jpg"><img>
   </body>
 </html>
