--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ a {
     <li><a href=/web110/assignment6.html>Assignment 6</a></li>
     <li><a href=/web110/assignment6b.html>Assignment 6b</a></li>
     <li><a href=/web110/assignment7.html>Assignment 7</a></li>
+    <li><a href=/web110/assignment7b.html>Assignment 7b</a></li>
     <li><a href=/web110/assignment8.html>Assignment 8</a></li>
 </ul></p>
 
