--- a/web110/assignment7b.html
+++ b/web110/assignment7b.html
@@ -7,6 +7,7 @@
   </head>
   <body>
 <h1>Assignment 7b</h1>
-<p>This session went over databases and basic SQL coding. This really intrigued me as in my work day our support team uses SQL on the backend. Learning about that can help me progress within my current career as when I interview for support I will have some base knowledge if asked any questions specific to SQL commands and what not. </p>
+<p>This session went over databases and basic SQL coding. This really intrigued me as in my work day our support team uses SQL on the backend. Learning about that can help me progress within my current career as when I interview for support I will have some base knowledge if asked any questions specific to SQL commands and what not.</p>
+<p>Will post 15 answers to questions tomorrow (thursday)</p>
   </body>
 </html>
