--- a/web110/assignment7b.html
+++ b/web110/assignment7b.html
@@ -10,27 +10,27 @@
   <p>This session went over databases and basic SQL coding. This really intrigued me as in my work day our support team uses SQL on the backend. Learning about that can help me progress within my current career as when I interview for support I will have some base knowledge if asked any questions specific to SQL commands and what not.</p>
   <div class="container">
     <p>What fields are contained in the Categories table?</p>
-    <p style="color: rgb(30, 130, 197);">Integer and text</p>
+      <p style="color: rgb(30, 130, 197);">CategoryID, CategoryName, and Description</p>
     <p>What is the primary key for the Customers table?</p>
-    <p style="color: rgb(30, 130, 197);">CustomerID</p>
+      <p style="color: rgb(30, 130, 197);">CustomerID</p>
     <p>How are the Orders table and the OrderDetails table related?</p>
-    <p style="color: rgb(30, 130, 197);">OrderID</p>
+      <p style="color: rgb(30, 130, 197);">OrderID</p>
     <p>List the CustomerName for all customers in the country 'Italy'.</p>
-    <p style="color: rgb(30, 130, 197);">Franchi S.p.A.,Reggiani Caseifici, and Magazzini Alimentari Riuniti </p>
+      <p style="color: rgb(30, 130, 197);">Franchi S.p.A.,Reggiani Caseifici, and Magazzini Alimentari Riuniti </p>
     <p>List the ProductName for all products in Category 1 with a price less than $5.00.</p>
-    <p style="color: rgb(30, 130, 197);">Guaraná Fantástica</p>
+      <p style="color: rgb(30, 130, 197);">Guaraná Fantástica</p>
     <p>List the SupplierName for all suppliers from English-speaking countries (Australia, Canada, UK, USA)</p>
-    <p style="color: rgb(30, 130, 197);">	G'day, Mate, Pavlova, Ltd., Ma Maison, 	Forêts d'érables, Exotic Liquid, Specialty Biscuits Ltd., New Orleans Cajun Delights, Grandma Kelly's Homestead, Bigfoot Breweries, and New England Seafood Cannery </p>
+      <p style="color: rgb(30, 130, 197);">	G'day, Mate, Pavlova, Ltd., Ma Maison, 	Forêts d'érables, Exotic Liquid, Specialty Biscuits Ltd., New Orleans Cajun Delights, Grandma Kelly's Homestead, Bigfoot Breweries, and New England Seafood Cannery </p>
     <p>List the first and last names of all employees having a birthday in September.</p>
-    <p style="color: rgb(30, 130, 197);">Adam West and Margaret Peakcock</p>
+      <p style="color: rgb(30, 130, 197);">Adam West and Margaret Peakcock</p>
     <p>List the CustomerName and OrderID for all orders placed on 9 September 1996.</p>
-    <p style="color: rgb(30, 130, 197);">Magazzini Alimentari Riuniti(10300) Die Wandernde Kuh(10301)</p>
+      <p style="color: rgb(30, 130, 197);">Magazzini Alimentari Riuniti(10300) Die Wandernde Kuh(10301)</p>
     <p>List the ProductName for all seafood products with a supplier from 'Boston'.</p>
-    <p style="color: rgb(30, 130, 197);">Jack's New England Clam Chowder and Boston Crab Meat </p>
+      <p style="color: rgb(30, 130, 197);">Jack's New England Clam Chowder and Boston Crab Meat </p>
     <p>List the CustomerName and OrderID for all customers who ordered 'Aniseed Syrup', sorted in alphabetical order.</p>
-    <p style="color: rgb(30, 130, 197);">B's Beverages(10289) + LINO-Delicateses(10405) </p>
+      <p style="color: rgb(30, 130, 197);">B's Beverages(10289) + LINO-Delicateses(10405) </p>
     <p>List the ProductName, Quantity, Price, and ExtendedPrice (Quantity * Price) for orders 10344 and 10345.</p>
-    <p style="color: rgb(30, 130, 197);">Chef Anton's Cajun Seasoning,35,22.00,770
+      <p style="color: rgb(30, 130, 197);">Chef Anton's Cajun Seasoning,35,22.00,770
       Northwoods Cranberry Sauce,70,40.00,2800 Teatime Chocolate Biscuits,70,9.20,644
       Singaporean Hokkien Fried Mee,80,14.00,1120
       Northwoods Cranberry Sauce,70,40.00,2800</p>
