update wp titles

--- a/web110/assignment3.html
+++ b/web110/assignment3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta charset="UTF-8">
-    <title>Assignment 2 Activities</title>
+    <title>Assignment Page</title>
     <link rel="stylesheet" href="external styles.css">
   </head>
   <h1>Assignment 3</h1>
