--- a/web110/assignment5b.html
+++ b/web110/assignment5b.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Assignment 5b</title>
+    <title>Assignment Page 5b</title>
     <h1><h1 style="color:green">This is my inline style example with a green heading</h1></h1>
     <style>
         .style1 {
