--- a/web110/assignment4a.html
+++ b/web110/assignment4a.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Assignment 2 Activities</title>
+    <title>Assignment Page</title>
     <link rel="stylesheet" href="external styles.css">
   </head>
   <h1>Assignment 4a</h1>
