--- a/web110/assignment7b.html
+++ b/web110/assignment7b.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Assignment Page</title>
   <link rel="stylesheet" href="external styles.css">
 </head>
 <body>
