project draft upload

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ a {
 <header> 
     <h1>Austin's Assignments</h1>
 </header>
+<div class="container">
   <p>  <ul style="list-style-type: disc;">
     <li><a href=/web110/assignment.html>Assignment 1</a></li>
     <li><a href=/web110/assignment1b.html>Assignment 1b</a></li>
@@ -51,7 +52,8 @@ a {
     <li><a href=/web110/assignment7.html>Assignment 7</a></li>
     <li><a href=/web110/assignment7b.html>Assignment 7b</a></li>
     <li><a href=/web110/assignment8.html>Assignment 8</a></li>
+    <li><a href=/web110/finalproject.html>Final Project</a></li>
 </ul></p>
-
+</div>
 </body>
 </html>
