--- a/web110/finalproject.html
+++ b/web110/finalproject.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="external styles.css">
   </head>
   <body>
-    <p>Just looking to make sure I am on the correct path with this final project. Here is the video link https://youtu.be/EhBbKFOI3Jg</p>
+    <p>Just looking to make sure I am on the correct path with this final project. Here is the <a href="https://youtu.be/EhBbKFOI3Jg">video link. </a></p>
   </body>
 </html>
