adjusted finalprojhect to embed video

--- a/web110/finalproject.html
+++ b/web110/finalproject.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="external styles.css">
   </head>
   <body>
-    <p>Just looking to make sure I am on the correct path with this final project. Here is the <a href="https://youtu.be/EhBbKFOI3Jg">video link. </a></p>
+    <iframe width="1080" height="720" src="https://www.youtube.com/embed/EhBbKFOI3Jg?si=MuZluOw779EhDCWx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>Looking to make sure I am on the correct path with this final project.</p>
+    <p>In the past month I have learned a lot about the more unseen part of the internet. Such as HTML, networking and security, and just how the internet functions as whole. The most intersting portion to this was learning about HTML and creating webpages to complete each assignment. The interactiveness allowed me to develop a better understanding to HTML and its uses. </p>
+    
   </body>
 </html>
