--- a/web110/assignment8.html
+++ b/web110/assignment8.html
@@ -2,10 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Assignment Page</title>
     <link rel="stylesheet" href="external styles.css">
   </head>
   <body>
-    <p>Setting location for assignment 8 draft - so I cant verify links all work</p>
+    <h1>Assignment 8</h1>
+    <li> SELECT * FROM CUSTOMERS</li>
+    <li>SELECT * FROM Customers
+      WHERE Country='USA';</li>
+    <li>SELECT COUNT(column_name)
+      FROM table_name
+      WHERE condition;</li>
+    <li>INSERT INTO table_name (column1, column2, column3, ...)
+      VALUES (value1, value2, value3, ...)</li>
+    <li>UPDATE table_name
+      SET column1 = value1, column2 = value2, ...
+      WHERE condition;</li>
+    <p></p>
   </body>
 </html>
