--- a/web110/assignment8.html
+++ b/web110/assignment8.html
@@ -18,6 +18,6 @@
     <li>UPDATE table_name
       SET column1 = value1, column2 = value2, ...
       WHERE condition;</li>
-    <p></p>
+    <p>I learned some valuable commands if I ever run into a database where SQL is needed. I will know some basics that will be able to pilot myself into obtainig, counting, inserting, or updating any information within a database.</p>
   </body>
 </html>
